--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@electron/remote": "^2.0.1",
     "axios": "^0.27.2",
     "electron-store": "^8.0.1",
+    "element-plus": "^2.2.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "simple-flakeid": "^0.0.5",
